# C2-Simulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: link.rs  main.rs  mode.rs
