[package]
name = "C2-Simulator"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4.22"
env_logger = "0.10.2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
rand = "0.8"